# zed

./: Cargo.toml  MUST_DO_TO_GET_CODE.txt  PHASE2_FINAL.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PUSH_INSTRUCTIONS.md  PUSH_NOW.md  PUSH_TO_WRK.md  READY_TO_PUSH.md  SETTINGS.md  START_AFTER_VS_INSTALL.md  TERMINAL_PROFILES.md  WINDOWS_BUILD.md  quick-push.sh  setup-ssh.sh
assets/settings/: complete-settings-example.json  minimal-example.json  terminal-profiles-example.json
crates/acp_thread/: Cargo.toml
crates/activity_indicator/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent_servers/: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/ai_onboarding/: Cargo.toml
crates/ai_onboarding/src/: ai_onboarding.rs
crates/askpass/: Cargo.toml
crates/askpass/src/: askpass.rs
crates/assistant_slash_command/: Cargo.toml
crates/assistant_slash_commands/: Cargo.toml
crates/auto_update_ui/: Cargo.toml
crates/cli/: Cargo.toml
crates/codestral/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/copilot/: Cargo.toml
crates/copilot/src/: copilot.rs
crates/crashes/: Cargo.toml
crates/dap/: Cargo.toml
crates/dap/src/: dap.rs
crates/edit_prediction/: Cargo.toml
crates/edit_prediction/src/: edit_prediction.rs
crates/extension/: Cargo.toml
crates/extension/src/: extension.rs
crates/extension_host/: Cargo.toml
crates/extension_host/src/: extension_host.rs
crates/git/: Cargo.toml
crates/git/src/: repository.rs
crates/git_hosting_providers/: Cargo.toml
crates/git_hosting_providers/src/: git_hosting_providers.rs
crates/json_schema_store/: Cargo.toml
crates/language_models/: Cargo.toml
crates/language_models/src/: language_models.rs  provider.rs
crates/language_onboarding/: Cargo.toml
crates/language_tools/: Cargo.toml
crates/line_ending_selector/: Cargo.toml
crates/markdown/: Cargo.toml
crates/markdown_preview/: Cargo.toml
crates/notifications/: Cargo.toml
crates/picker/: Cargo.toml
crates/prettier/: Cargo.toml  prettier_server.js
crates/prettier/src/: prettier.rs
crates/project/: Cargo.toml
crates/project/src/: project.rs  project_settings.rs  task_inventory.rs
crates/project/src/context_server_store/: extension.rs
crates/project/src/stubs/: dap.rs  debugger.rs  git_hosting_providers.rs  mod.rs  prettier.rs  remote.rs
crates/remote/: Cargo.toml
crates/remote/src/: remote.rs
crates/rules_library/: Cargo.toml
crates/settings/src/: vscode_import.rs
crates/settings/src/settings_content/: terminal.rs
crates/settings_profile_selector/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/snippet_provider/: Cargo.toml
crates/snippet_provider/src/: lib.rs
crates/snippets_ui/: Cargo.toml
crates/supermaven/: Cargo.toml
crates/tasks_ui/: Cargo.toml
crates/terminal/src/: terminal_settings.rs
crates/terminal_view/: Cargo.toml
crates/terminal_view/src/: terminal_panel.rs
crates/theme_extension/: Cargo.toml
crates/theme_extension/src/: theme_extension.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: title_bar.rs
crates/ui/: Cargo.toml
crates/ui_input/: Cargo.toml
crates/ui_input/src/: input_field.rs  number_field.rs  ui_input.rs
crates/workspace/: Cargo.toml
crates/zed/: Cargo.toml
crates/zeta/: Cargo.toml
crates/zeta2/: Cargo.toml
crates/zeta2_tools/: Cargo.toml
crates/zeta_cli/: Cargo.toml
