[package]
name = "extension_host"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/extension_host.rs"
doctest = false

[dependencies]
client.workspace = true
fs.workspace = true
gpui.workspace = true
language.workspace = true
node_runtime.workspace = true
theme.workspace = true
util.workspace = true
