[package]
name = "prettier"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/prettier.rs"
doctest = false

[dependencies]
anyhow.workspace = true
fs.workspace = true
gpui.workspace = true
language.workspace = true
node_runtime.workspace = true
