[package]
description = "The fast, collaborative code editor."
edition.workspace = true
name = "zed"
version = "0.214.0"
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Zed Team <hi@zed.dev>"]

[lints]
workspace = true

[[bin]]
name = "zed"
path = "src/zed-main.rs"

[lib]
name = "zed"
path = "src/main.rs"

[dependencies]
activity_indicator.workspace = true
agent_settings.workspace = true
anyhow.workspace = true
# askpass.workspace # REMOVED = true
assets.workspace = true
# audio.workspace # REMOVED = true
auto_update.workspace = true
auto_update_ui.workspace = true
backtrace = "0.3"
bincode.workspace = true
# breadcrumbs.workspace # REMOVED = true
# call.workspace # REMOVED = true
# channel.workspace # REMOVED = true
clap.workspace = true
cli.workspace = true
client.workspace = true
# collab_ui.workspace # REMOVED = true
collections.workspace = true
command_palette.workspace = true
component.workspace = true
# copilot.workspace # REMOVED = true
crashes.workspace = true
# dap_adapters.workspace # REMOVED = true
db.workspace = true
# debug_adapter_extension.workspace # REMOVED = true
# debugger_tools.workspace # REMOVED = true
# debugger_ui.workspace # REMOVED = true
env_logger.workspace = true
# extension.workspace # REMOVED = true
# extension_host.workspace # REMOVED = true
# extensions_ui.workspace # REMOVED = true
feature_flags.workspace = true
# feedback.workspace # REMOVED = true
# file_finder.workspace # REMOVED = true
fs.workspace = true
futures.workspace = true
git.workspace = true
# git_hosting_providers.workspace # REMOVED = true
# git_ui.workspace # REMOVED = true
# go_to_line.workspace # REMOVED = true
system_specs.workspace = true
gpui = { workspace = true, features = [
    "wayland",
    "x11",
    "font-kit",
    "windows-manifest",
] }
gpui_tokio.workspace = true
rayon.workspace = true

http_client.workspace = true
# image_viewer.workspace # REMOVED = true
# inspector_ui.workspace # REMOVED = true
install_cli.workspace = true
# journal.workspace # REMOVED = true
json_schema_store.workspace = true
# keymap_editor.workspace # REMOVED = true
language.workspace = true
# language_extension.workspace # REMOVED = true
language_model.workspace = true
language_models.workspace = true
log.workspace = true
markdown.workspace = true
menu.workspace = true
migrator.workspace = true
# miniprofiler_ui.workspace # REMOVED = true
mimalloc = { version = "0.1", optional = true }
# nc.workspace # REMOVED = true
nix = { workspace = true, features = ["pthread", "signal"] }
node_runtime.workspace = true
notifications.workspace = true
# onboarding.workspace # REMOVED = true
# outline.workspace # REMOVED = true
# outline_panel.workspace # REMOVED = true
parking_lot.workspace = true
paths.workspace = true
picker.workspace = true
profiling.workspace = true
project.workspace = true
# project_panel.workspace # REMOVED = true
# project_symbols.workspace # REMOVED = true
proto.workspace = true
# recent_projects.workspace # REMOVED = true
release_channel.workspace = true
# remote.workspace # REMOVED = true
# repl.workspace # REMOVED = true
reqwest.workspace = true
reqwest_client.workspace = true
rope.workspace = true
# search.workspace # REMOVED = true
serde.workspace = true
serde_json.workspace = true
session.workspace = true
settings.workspace = true
settings_profile_selector.workspace = true
settings_ui.workspace = true
shellexpand.workspace = true
smol.workspace = true
# svg_preview.workspace # REMOVED = true
sysinfo.workspace = true
# tab_switcher.workspace # REMOVED = true
task.workspace = true
tasks_ui.workspace = true
telemetry.workspace = true
telemetry_events.workspace = true
terminal_view.workspace = true
theme.workspace = true
theme_extension.workspace = true
theme_selector.workspace = true
time.workspace = true
title_bar.workspace = true
# toolchain_selector.workspace # REMOVED = true
ui.workspace = true
ui_input.workspace = true
ui_prompt.workspace = true
url.workspace = true
urlencoding.workspace = true
util.workspace = true
uuid.workspace = true
# vim.workspace # REMOVED = true
# vim_mode_setting.workspace # REMOVED = true
watch.workspace = true
# web_search.workspace # REMOVED = true
# web_search_providers.workspace # REMOVED = true
workspace.workspace = true
zed_actions.workspace = true
zed_env_vars.workspace = true
zlog.workspace = true
zlog_settings.workspace = true
chrono.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
# image_viewer = { workspace # REMOVED = true, features = ["test-support"] }
itertools.workspace = true
language = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
project = { workspace = true, features = ["test-support"] }
terminal_view = { workspace = true, features = ["test-support"] }
tree-sitter-md.workspace = true
tree-sitter-rust.workspace = true
workspace = { workspace = true, features = ["test-support"] }

[package.metadata.bundle-dev]
icon = ["resources/app-icon-dev@2x.png", "resources/app-icon-dev.png"]
identifier = "dev.zed.Zed-Dev"
name = "Zed Dev"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["zed"]

[package.metadata.bundle-nightly]
icon = ["resources/app-icon-nightly@2x.png", "resources/app-icon-nightly.png"]
identifier = "dev.zed.Zed-Nightly"
name = "Zed Nightly"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["zed"]

[package.metadata.bundle-preview]
icon = ["resources/app-icon-preview@2x.png", "resources/app-icon-preview.png"]
identifier = "dev.zed.Zed-Preview"
name = "Zed Preview"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["zed"]

[package.metadata.bundle-stable]
icon = ["resources/app-icon@2x.png", "resources/app-icon.png"]
identifier = "dev.zed.Zed"
name = "Zed"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["zed"]

[package.metadata.cargo-machete]
ignored = ["profiling", "zstd"]
